feat(config): safe transforming list elements